# PROIECT-POO-MAGAZIN-2

./: CMakeLists.txt  main.cpp
build_gh_test/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  magazin
include/: CatalogItem.h  Exceptions.h  History.h  IPriceStrategy.h  Inventory.h  Laptop.h  MarketSimulator.h  Phone.h  PriceStrategies.h  PricingEngine.h  Product.h  ProductFactory.h  Spec.h  StocProdus  StocProdus.h  Store.h  Tablet.h  Utils.h
src/: CatalogItem.cpp  Inventory.cpp  Laptop.cpp  MarketSimulator.cpp  Phone.cpp  Product.cpp  Spec.cpp  StocProdus.cpp  Store.cpp  Tablet.cpp  Utils.cpp  main.cpp
